add calculation of (some) components of LT3580 (chip used to generate high voltage for photomultiplier). Update README.md about used microcontroler and user interface, paritialy create circuit for high voltage generator.

--- a/Documentation/Diagrams/ArchitectureOverview.tex
+++ b/Documentation/Diagrams/ArchitectureOverview.tex
@@ -17,11 +17,11 @@
 	\pgfsetlayers{background,main}
 	
 		\node (sample) [system] {Radioactive sample};
-		\node (scintillatorcristal) [component, below=of sample] {Scintillator Cristal};
+		\node (scintillatorcristal) [system, below=of sample] {Scintillator Cristal};
 		\node (photomultiplier) [component, below=of scintillatorcristal] {Photomultiplier};
 		
 		
-		\node (hwpower) [component, right=of photomultiplier] {Polarization Power Supply\\ (500-1500V DC)};
+		\node (hwpower) [component, right=of photomultiplier] {Polarization Power Supply\\ (1100V DC)};
 		\node (amplifier) [component, below=of photomultiplier] {Amplifier};
 
 		\node (discriminator) [component, below=of amplifier] {Impulse Amplitude Discriminator};
@@ -29,13 +29,10 @@
 		\node (peakssurement) [component, below=of discriminator, xshift=-4cm] {Amplitude Meassurement\\  (ADC: MCP3425A0T-ECH)};
 		\node (trigger) [component, below=of discriminator, xshift=4cm] {Acquisition Trigger};
 
-		\node (cpu) [component, below=of peakssurement, xshift=4cm] {Acquisition\\ (STM8S003F3P6TR)};
-		\node (gui) [component, right=of cpu] {User Interface\\ (3xLED)};
-		
-		\node (uartconverter) [system, below=of cpu, xshift=-4cm] {UART over USB\\ (USB UART FTDI Converter)};
-		\node (stm8programmer) [system, below=of cpu, xshift=4cm] {STM8 programator\\ (STM8SVLDISCOVERY)};
-		
-		\node (pi) [system, below=of uartconverter, xshift=4cm] {Data processing and firmware flashing\\ (RaspberryPi 3B)};
+		\node (cpu) [component, below=of peakssurement, xshift=4cm] {Acquisition\\ (Arduino Uno)};
+		\node (gui) [component, right=of cpu] {User Interface\\ (Arduino Uno 2.4 inch \\ TFT LCD Shield)};
+			
+		\node (pi) [system, below=of cpu] {Data processing and firmware flashing\\ (RaspberryPi 3B)};
 		\node (pc) [system, below=of pi] {Local PC\\ (OS independent)};
 		
 		\begin{pgfonlayer}{background}
@@ -45,10 +42,16 @@
 		% Connectors
 		\begin{scope}[->]
 		
-		\draw [-{Latex[scale=3.0]}] (sample) -- node[anchor=west, minimum width=.25cm, draw=none] {gamma ray = high energy, low wavelength single photon} (scintillatorcristal);
-		\draw [-{Latex[scale=3.0]}] (scintillatorcristal) -- node[anchor=west, minimum width=.25cm, draw=none] {many photons in visible spectrum = lower energy, lower wavelength} (photomultiplier);
+		\draw [-{Latex[scale=3.0]}] (sample) -- node[anchor=west, minimum width=.25cm, draw=none, text width=5.0cm] 
+			{high energy (low wavelength) single photon} (scintillatorcristal);
+
+		\draw [-{Latex[scale=3.0]}] (scintillatorcristal) -- node[anchor=west, minimum width=.25cm, draw=none, text width=5.0cm] 
+			{multiple lower energy (lower wavelength) photons in visible spectrum} (photomultiplier);
+
 		\draw [-{Latex[scale=3.0]}] (hwpower) -- node[anchor=south, minimum width=.25cm, draw=none] {} (photomultiplier);
-		\draw [-{Latex[scale=3.0]}] (photomultiplier) -- node[anchor=west, minimum height=.25cm, draw=none] {current, amount of electrons = photons * tube gain} (amplifier);
+
+		\draw [-{Latex[scale=3.0]}] (photomultiplier) -- node[anchor=west, minimum height=.25cm, draw=none, text width=5.0cm, minimum height=2cm, ] 
+			{electric current = amount of detected photons * tube gain} (amplifier);
 
 		\draw [-{Latex[scale=3.0]}] (amplifier) -- node[anchor=west, minimum height=.25cm, draw=none] {} (discriminator);
 
@@ -58,11 +61,11 @@
 		\draw [-{Latex[scale=3.0]}] (peakssurement) -- node[anchor=south, minimum height=.25cm, draw=none] {I2C} (cpu);
 		\draw [-{Latex[scale=3.0]}] (trigger) -- node[anchor=south, minimum height=.25cm, draw=none] {GPIO} (cpu);
 
-		\draw [-{Latex[scale=3.0]}] (cpu) -- node[anchor=south, minimum height=.25cm, draw=none] {GPIO} (gui);
-		\draw [-{Latex[scale=3.0]}] (cpu) -- node[anchor=south, minimum height=.25cm, draw=none] {UART} (uartconverter);
-		\draw [-{Latex[scale=3.0]}] (stm8programmer) -- node[anchor=east, minimum height=.25cm, draw=none] {SWIM} (cpu);
-		\draw [-{Latex[scale=3.0]}] (pi) -- node[anchor=south, minimum height=.25cm, draw=none] {USB} (stm8programmer);
-		\draw [-{Latex[scale=3.0]}] (uartconverter) -- node[anchor=south, minimum height=.25cm, draw=none] {USB} (pi);
+		\draw [-{Latex[scale=3.0]}] (cpu) -- node[anchor=south, minimum height=.25cm, draw=none] {I2C} (gui);
+
+		\draw [-{Latex[scale=3.0]}] (cpu) -- node[anchor=west, minimum height=.25cm, draw=none] {UART over USB} (pi);
+		\draw [-{Latex[scale=3.0]}] (pi) -- node[anchor=south, minimum height=.25cm, draw=none] {} (cpu);
+
 		\draw [-{Latex[scale=3.0]}] (pi) -- node[anchor=west, minimum height=.25cm, draw=none] {Ethernet} (pc);
 		\draw [-{Latex[scale=3.0]}] (pc) -- node[anchor=west, minimum height=.25cm, draw=none] {} (pi);
 	
