Rework (in progress) of HV Power Supply due to change topology to flyback (#91), added part of calcuations of components and draft of the circuit. Clarified ducumentation about used mcu. Added footprints for adc and mcu.

--- a/Documentation/Diagrams/ArchitectureDataAcquisition.tex
+++ b/Documentation/Diagrams/ArchitectureDataAcquisition.tex
@@ -26,7 +26,7 @@
         \node (amplifier) [component, right=of photomultiplier] {Charge Amplifier\\ (LTC6269)};	
 		\node (pulseshaping) [component, below=of amplifier] {Pulse Shaping};	
 		\node (adc) [component, below=of pulseshaping] {ADC\\ (1 Msps, 16bit)\\ (MCP33131-10)};	
-		\node (acquisition) [component, below=of adc] {Acquisition \\ (to be determined)};	
+		\node (acquisition) [component, below=of adc] {Acquisition \\ (PIC32MZ0512EFE064-I/PT)};	
 		\node (temperaturemonitor) [component, below=of acquisition] {Monitor of Local Temperature};	
 	
 		\node (gui) [system, right=of acquisition] {User Interface\\ (Arduino Uno 2.4 inch \\ TFT LCD Shield)};	
